account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  labels:
    app: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
      - name: account-service
        image: westerntravellers/backend:account-service
        ports:
        - containerPort: 8082
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: account-service-svc
spec:
  selector:
    app: account-service
  ports:
  - port: 80
    targetPort: 8082
