activity-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-service
  labels:
    app: activity-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity-service
  template:
    metadata:
      labels:
        app: activity-service
    spec:
      containers:
      - name: activity-service
        image: westerntravellers/backend:western-activity
        ports:
        - containerPort: 8083
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: activity-service-svc
spec:
  selector:
    app: activity-service
  ports:
  - port: 80
    targetPort: 8083
