config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  labels: 
    app: config-server
spec:
  replicas: 1
  selector:
     matchLabels:
        app: config-server
    
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name:  config-server
        image: westerndocker/westernrepo:config-server
        imagePullPolicy: Always
        ports: 
          - containerPort: 8888
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: config-server-svc
spec:
  selector:
    app: config-server
  ports:
  - port: 80
    targetPort: 8888
