crm-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crm-service
  labels:
    app: crm-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crm-service
  template:
    metadata:
      labels:
        app: crm-service
    spec:
      containers:
      - name: crm-service
        image: westerntravellers/backend:crm-service
        ports:
        - containerPort: 8089
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: crm-service-svc
spec:
  selector:
    app: crm-service
  ports:
  - port: 80
    targetPort: 8089
