event-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  labels:
    app: event-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
      - name: event-service
        image: westerntravellers/backend:western-events
        ports:
        - containerPort: 8087
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: event-service-svc
spec:
  selector:
    app: event-service
  ports:
  - port: 80
    targetPort: 8087
