gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  labels: 
    app: gateway-service
spec:
  replicas: 1
  selector:
     matchLabels:
        app: gateway-service
    
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name:  getway-service
        image: westerntravellers/backend:gateway-service
        imagePullPolicy: Always
        ports: 
          - containerPort: 8080
      # imagePullSecrets:
      #   - name: regcred

     
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-svc
spec:
  type: LoadBalancer
  selector:
    app: gateway-service
  ports:
  - port: 80
    targetPort: 8080
