tour-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tour-auth-service
  labels: 
    app: tour-auth-service
spec:
  replicas: 1
  selector:
     matchLabels:
        app: tour-auth-service
    
  template:
    metadata:
      labels:
        app: tour-auth-service
    spec:
      containers:
      - name:  tour-auth-service
        image: westerntravellers/backend:jwt-auth
        imagePullPolicy: Always
        ports: 
          - containerPort: 9090
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: tour-auth-service-svc
spec:
  selector:
    app: tour-auth-service
  ports:
  - port: 80
    targetPort: 9090
