tour-package.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tour-package
  labels: 
    app: tour-package
spec:
  replicas: 1
  selector:
     matchLabels:
        app: tour-package
    
  template:
    metadata:
      labels:
        app: tour-package
    spec:
      containers:
      - name:  tour-package
        image: westerntravellers/backend:tour-package
        imagePullPolicy: Always
        ports: 
          - containerPort: 8085
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: tour-package-svc
spec:
  selector:
    app: tour-package
  ports:
  - port: 80
    targetPort: 8085
