web-service.yaml
# web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: western-front-ui
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - name: western-front-ui
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: western-front-ui
  type: ClusterIP
